social media login

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,4 @@
 REACT_APP_BACKEND = http://localhost:8000
-REACT_APP_FACEBOOK = 767242157684554
+REACT_APP_FACEBOOK_ID = 767242157684554
+REACT_APP_GOOGLE_ID=894956942050-3cbgrs5fvp6sedkgtmj210b77m86993o.apps.googleusercontent.com
 HTTPS = true
