--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "chroma-js": "^2.4.2",
     "install": "^0.13.0",
     "jquery": "^3.6.1",
     "jwt-decode": "^3.1.2",
